Readded correct config file again

--- a/ap-or-voc-config.json
+++ b/ap-or-voc-config.json
@@ -6,7 +6,7 @@
     "name": "Agentschap Digitaal Vlaanderen",
     "uri": "https://data.vlaanderen.be/id/organisatie/OVO002949"
   },
-  "publicationDate": [],
+  "publicationDate": "",
   "descriptionFileName": "",
   "specificationDocuments": [],
   "documentation": [],
