Small label tweak inside GA

--- a/.github/workflows/configuration_validator.yml
+++ b/.github/workflows/configuration_validator.yml
@@ -47,7 +47,7 @@ jobs:
           base_dir: target
           comment: true
           use_gitignore: false
-      - name: Save validation logs
+      - name: Log validation result to summary
         run: |
           echo "# Summary" >> $GITHUB_STEP_SUMMARY
           if [ ${{ steps.validate.outputs.success }} == "true" ]; then
