--- a/ap-or-voc-config.json
+++ b/ap-or-voc-config.json
@@ -2,6 +2,7 @@
   "title": "",
   "category": "",
   "usage": "",
+  "status": "",
   "responsibleOrganisation": {
     "name": "Agentschap Digitaal Vlaanderen",
     "uri": "https://data.vlaanderen.be/id/organisatie/OVO002949"
