Added three more dates for traceability of the state of a standard

--- a/ap-or-voc-config.json
+++ b/ap-or-voc-config.json
@@ -16,5 +16,8 @@
   "presentations": [],
   "dateOfRegistration": "",
   "dateOfAcknowledgementByWorkingGroup": "",
-  "dateOfAcknowledgementBySteeringCommittee": ""
+  "dateOfAcknowledgementBySteeringCommittee": "",
+  "datePublicReviewStart": "",
+  "datePublicReviewEnd": "",
+  "endOfPublicationDate": ""
 }
