--- a/.github/workflows/convert_eap.yml
+++ b/.github/workflows/convert_eap.yml
@@ -1,28 +1,12 @@
 name: Convert the EAP file to JSON-ld
 
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
-      uml-file:
-        description: "Link to the UML file, for example: https://github.com/Informatievlaanderen/OSLOthema-persoon/raw/master/ICEG-Person.eap"
+      config-file:
+        description: "Name of the config file. Example: mijn-applicatieprofiel-ap.json"
         required: true
-        default: https://github.com/Informatievlaanderen/OSLOthema-persoon/raw/master/ICEG-Person.eap
-      diagram-name:
-        description: "Name of the diagram, for example: OSLO-Persoon-Basis"
-        required: true
-        default: "OSLO-Persoon-Basis"
-      specification-type:
-        description: "Type of the specification, for example: Vocabulary or ApplicationProfile"
-        required: true
-        default: "ApplicationProfile"
-      version-id:
-        description: "Version of the specification, for example: test/1"
-        required: true
-        default: "test/1"
-      publication-environment:
-        description: "Publication environment, for example: https://data.vlaanderen.be"
-        required: true
-        default: "https://data.vlaanderen.be"
+        type: string
 
 jobs:
   convert-eap:
@@ -38,8 +22,37 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install jq
+        run: sudo apt-get install jq
+
       - name: Install ea-converter
         run: npm install @oslo-flanders/ea-converter
 
+      # Fetch the required keys from the configuration file
+      - name: Read key from configuration file
+        id: read-config
+        run: |
+          diagram=$(jq -r '.[0].diagram' config/${{ github.event.inputs.config-file }})
+
+          uml=$(jq -r '.[0].eap' config/${{ github.event.inputs.config-file }})
+
+          type=$(jq -r '.[0].type' config/${{ github.event.inputs.config-file }})
+          if [ "$type" = "ap" ]; then
+          type="ApplicationProfile"
+          elif [ "$type" = "voc" ]; then
+          type="Vocabulary"
+          fi
+
+          echo "diagramName=$diagram" >> "$GITHUB_OUTPUT"
+          echo "umlFile=$uml" >> "$GITHUB_OUTPUT"
+          echo "specificationType=$type" >> "$GITHUB_OUTPUT"
+
+      # Run the converter
       - name: Run oslo-converter-ea
-        run: npx oslo-converter-ea --umlFile ${{ github.event.inputs.uml-file }} --diagramName ${{ github.event.inputs.diagram-name }} --specificationType ${{ github.event.inputs.specification-type }} --versionId ${{ github.event.inputs.version-id }} --publicationEnvironment ${{ github.event.inputs.publication-environment }}
+        run: npx oslo-converter-ea --umlFile ${{ steps.read-config.outputs.umlFile }} --diagramName ${{ steps.read-config.outputs.diagramName }} --specificationType ${{ steps.read-config.outputs.specificationType }} --versionId test/1 --publicationEnvironment https://data.vlaanderen.be
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: report.jsonld
+          path: ./report.jsonld
