Changed it to check to see if the report.jsonld exists

--- a/.github/workflows/convert_eap.yml
+++ b/.github/workflows/convert_eap.yml
@@ -51,13 +51,13 @@ jobs:
       - name: Run oslo-converter-ea
         run: npx oslo-converter-ea --umlFile ${{ steps.read-config.outputs.umlFile }} --diagramName ${{ steps.read-config.outputs.diagramName }} --specificationType ${{ steps.read-config.outputs.specificationType }} --versionId test/1 --publicationEnvironment https://data.vlaanderen.be
 
-      - name: Check for errors in output
+      - name: Check if report.jsonld exists
         run: |
-          if echo "${{ steps.convert.outputs.result }}" | grep -i "error"; then
-            echo "Error found in workflow output"
-            exit 1
+          if [ -f ./report.jsonld ]; then
+            echo "report.jsonld exists."
           else
-            echo "No errors found in workflow output"
+            echo "report.jsonld does not exist."
+            exit 1
           fi
 
       - name: Upload artifact
