--- a/ap-or-voc-config.json
+++ b/ap-or-voc-config.json
@@ -3,10 +3,12 @@
   "category": "",
   "usage": "",
   "status": "",
-  "responsibleOrganisation": {
-    "name": "Agentschap Digitaal Vlaanderen",
-    "uri": "https://data.vlaanderen.be/id/organisatie/OVO002949"
-  },
+  "responsibleOrganisation": [
+    {
+      "name": "Agentschap Digitaal Vlaanderen",
+      "uri": "https://data.vlaanderen.be/id/organisatie/OVO002949"
+    }
+  ],
   "publicationDate": "",
   "descriptionFileName": "",
   "specificationDocuments": [],
