--- a/voc-config.json
+++ b/voc-config.json
@@ -1,1 +1,30 @@
-xxx
+{
+  "title": "Vocabularium Thermografische Gebouwanalyse",
+  "category": "vocabularium",
+  "usage": "",
+  "status": "",
+  "responsibleOrganisation": [
+    {
+      "name": "Agentschap Digitaal Vlaanderen",
+      "resourceReference": "https://data.vlaanderen.be/id/organisatie/OVO002949"
+    }
+  ],
+  "publicationDate": "",
+  "descriptionFileName": "thermai-description.md",
+  "specificationDocuments": [
+    {
+      "name": "Thermografische Gebouwanalyse Applicatieprofiel",
+      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/thermAI"
+    }
+  ],
+  "documentation": [],
+  "charter": {},
+  "reports": [],
+  "presentations": [],
+  "dateOfRegistration": "2024-12-1",
+  "dateOfAcknowledgementByWorkingGroup": "",
+  "dateOfAcknowledgementBySteeringCommittee": "",
+  "datePublicReviewStart": "2025-05-22",
+  "datePublicReviewEnd": "2025-09-11",
+  "endOfPublicationDate": ""
+}
