--- a/ap-config.json
+++ b/ap-config.json
@@ -25,25 +25,25 @@
       "resourceReference": "https://github.com/Informatievlaanderen/OSLOthema-thermAI/blob/standaardenregister/reports/Business%20werkgroep%20CoT%20ThermAI%202025-02-18.docx.pdf"
     },
     {
-      "name": "Verslag thematische werkgroep 1 - 18-03-2025",
+      "name": "Verslag Thematische Werkgroep 1 - 18-03-2025",
       "resourceReference": "https://github.com/Informatievlaanderen/OSLOthema-thermAI/blob/standaardenregister/reports/Thematische%20werkgroep%201%20-%20CoT%20ThermAI%202025-03-18.docx.pdf"
     },
     {
-      "name": "Verslag thematische werkgroep 2 - 15-04-2025",
+      "name": "Verslag Thematische Werkgroep 2 - 15-04-2025",
       "resourceReference": "https://github.com/Informatievlaanderen/OSLOthema-thermAI/blob/standaardenregister/reports/Thematische%20werkgroep%202%20-%20CoT%20ThermAI%202025-04-15.docx.pdf"
     },
   ],
   "presentations": [
    {
-      "name": "Presentatie business werkgroep - 18-02-2025",
+      "name": "Presentatie Business Werkgroep - 18-02-2025",
       "resourceReference": "https://github.com/Informatievlaanderen/OSLOthema-thermAI/blob/standaardenregister/presentations/ThermAI%20Business%20Werkgroep%20(1).pdf"
     },
     {
-      "name": "Presentatie thematische werkgroep 1 - 18-03-2025",
+      "name": "Presentatie Business Werkgroep 1 - 18-03-2025",
       "resourceReference": "https://github.com/Informatievlaanderen/OSLOthema-thermAI/blob/standaardenregister/presentations/Thematische%20werkgroep%201%20-%20ThermAI.pdf"
     },
     {
-      "name": "Presentatie thematische werkgroep 2 - 15-04-2025",
+      "name": "Presentatie Business Werkgroep 2 - 15-04-2025",
       "resourceReference": "https://github.com/Informatievlaanderen/OSLOthema-thermAI/blob/standaardenregister/presentations/Thematische%20werkgroep%202%20-%20ThermAI.pdf"
     },
   ],
