--- a/voc-config.json
+++ b/voc-config.json
@@ -17,7 +17,12 @@
       "resourceReference": "https://data.vlaanderen.be/ns/thermografische-gebouwanalyse"
     }
   ],
-  "documentation": [],
+  "documentation": [
+    {
+      "name": "Applicatieprofiel Thermografische Gebouwanalyse",
+      "resourceReference": "https://data.vlaanderen.be/doc/applicatieprofiel/thermografische-gebouwanalyse"
+    }
+  ],
   "charter":[ 
   {
     "name": "Charter Thermografische Beeldanalyse",
