--- a/ap-config.json
+++ b/ap-config.json
@@ -9,7 +9,7 @@
       "resourceReference": "https://data.vlaanderen.be/id/organisatie/OVO002949"
     }
   ],
-  "publicationDate": "",
+  "publicationDate": "2025-05-22",
   "descriptionFileName": "thermai-description.md",
   "specificationDocuments": [
     {
@@ -31,7 +31,7 @@
   ],
   "reports": [
      {
-      "name": "Verslag business werkgroep - 18-02-2025",
+      "name": "Verslag Business werkgroep - 18-02-2025",
       "resourceReference": "https://github.com/Informatievlaanderen/OSLOthema-thermAI/blob/standaardenregister/reports/Business%20werkgroep%20CoT%20ThermAI%202025-02-18.docx.pdf"
     },
     {
