--- a/ap-config.json
+++ b/ap-config.json
@@ -1,7 +1,7 @@
 {
   "title": "Applicatieprofiel Thermografische Gebouwanalyse",
   "category": "Applicatieprofiel",
-  "usage": "Aanbevolen (vrijwillig)",
+  "usage": "https://data.vlaanderen.be/id/concept/StandaardGebruik/Aanbevolen",
   "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/OntwerpStandaard",
   "responsibleOrganisation": [
     {
