--- a/ap-config.json
+++ b/ap-config.json
@@ -25,7 +25,7 @@
   ],
   "charter": [
     {
-      "name": "Charter Thermografische Beeldanalyse",
+      "name": "Charter Thermografische Gebouwanalyse",
       "resourceReference": "https://raw.githubusercontent.com/Informatievlaanderen/OSLOthema-thermAI/standaardenregister/charter/Charter_OSLO_thermAI.pdf"
     }
   ],
