--- a/ap-config.json
+++ b/ap-config.json
@@ -41,6 +41,10 @@
     {
       "name": "Verslag Thematische Werkgroep 2 - 15-04-2025",
       "resourceReference": "https://raw.githubusercontent.com/Informatievlaanderen/OSLOthema-thermAI/standaardenregister/reports/Thematische%20werkgroep%202%20-%20CoT%20ThermAI%202025-04-15.pdf"
+    },
+    {
+      "name": "Verslag Thematische Werkgroep 3 - 15-05-2025",
+      "resourceReference": "https://github.com/Informatievlaanderen/OSLOthema-thermAI/blob/standaardenregister/reports/Verslag%20Thematische%20werkgroep%203%20-%20CoT%20ThermAI%202025-04-15.docx.pdf"
     }
   ],
   "presentations": [
@@ -55,6 +59,10 @@
     {
       "name": "Presentatie Thematische Werkgroep 2 - 15-04-2025",
       "resourceReference": "https://raw.githubusercontent.com/Informatievlaanderen/OSLOthema-thermAI/standaardenregister/presentations/Thematische%20werkgroep%202%20-%20ThermAI.pdf"
+    },
+    {
+      "name": "Presentatie Thematische Werkgroep 3 - 15-05-2025",
+      "resourceReference": "https://github.com/Informatievlaanderen/OSLOthema-thermAI/blob/standaardenregister/presentations/Slides%20-%20Thematische%20werkgroep%203%20-%20ThermAI.pdf"
     }
   ],
   "dateOfRegistration": "2024-12-1",
